--- a/dgca-issuance-web/Dockerfile
+++ b/dgca-issuance-web/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 RUN yarn && yarn build
 
 #FROM nginx:1.19.10 as app
-FROM rhscl/nginx-120-rhel7 as app
+FROM nginx:1.19 as app
 COPY --from=build ./app/build /usr/share/nginx/html
 COPY nginx/default.conf.template /etc/nginx/templates/default.conf.template
 ENV SERVER_PORT=80
