--- a/dgca-issuance-web/package.json
+++ b/dgca-issuance-web/package.json
@@ -36,7 +36,7 @@
     "lint-staged": "^10.5.4",
     "moment": "^2.29.1",
     "node-inspect-extracted": "^1.0.5",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14",
     "prettier": "^2.2.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
@@ -60,7 +60,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -94,5 +94,9 @@
     "@types/react-qr-reader": "^2.1.3",
     "http-proxy-middleware": "^1.1.1",
     "https-proxy-agent": "^5.0.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
