--- a/dgca-issuance-web/Dockerfile
+++ b/dgca-issuance-web/Dockerfile
@@ -8,9 +8,9 @@ RUN yarn && yarn build
 
 #FROM nginx:1.19.10 as app
 #FROM nginx:1.19 as app
-FROM nginxinc/nginx-unprivileged as app
+#FROM nginxinc/nginx-unprivileged as app # work
+FROM rhel8/nginx-120 as app
 COPY --from=build ./app/build /usr/share/nginx/html
 COPY nginx/default.conf.template /etc/nginx/templates/default.conf.template
-#RUN chown -R 101:101 /etc/nginx/*
 ENV SERVER_PORT=80
 ENV DGCA_ISSUANCE_SERVICE_URL=http://localhost:8080
