--- a/dgca-issuance-web/Dockerfile
+++ b/dgca-issuance-web/Dockerfile
@@ -9,7 +9,8 @@ RUN yarn && yarn build
 #FROM nginx:1.19.10 as app
 #FROM nginx:1.19 as app
 #FROM nginxinc/nginx-unprivileged as app # work
-FROM rhel8/nginx-120 as app
+#FROM rhel8/nginx-120 as app # doesn't work
+FROM nginx:latest as app
 COPY --from=build ./app/build /usr/share/nginx/html
 COPY nginx/default.conf.template /etc/nginx/templates/default.conf.template
 ENV SERVER_PORT=80
