--- a/dgca-issuance-web/Dockerfile
+++ b/dgca-issuance-web/Dockerfile
@@ -11,7 +11,7 @@ RUN yarn && yarn build
 FROM nginxinc/nginx-unprivileged as app
 #FROM rhel8/nginx-120 as app # doesn't work
 #FROM nginx:latest as app # ultima version de nginx 1.20 de docker errores de permisos
-COPY --from=build ./app/build /usr/share/nginx/html
-COPY nginx/default.conf.template /etc/nginx/templates/default.conf.template
+COPY --chown=101:101 --from=build ./app/build /usr/share/nginx/html
+COPY --chown=101:101 nginx/default.conf.template /etc/nginx/templates/default.conf.template
 ENV SERVER_PORT=80
 ENV DGCA_ISSUANCE_SERVICE_URL=http://localhost:8080
