--- a/dgca-issuance-web/nginx/default.conf.template
+++ b/dgca-issuance-web/nginx/default.conf.template
@@ -14,10 +14,10 @@ server {
     }
     location /dgca-issuance-service/ {
         proxy_ssl_server_name on;
-        proxy_pass ${DGCA_ISSUANCE_SERVICE_URL};
+        proxy_pass ${DGCA_ISSUANCE_SERVICE_URL}/;
     }
     location /dgca-businessrule-service/ {
         proxy_ssl_server_name on;
-        proxy_pass ${DGCA_BUSINESSRULE_SERVICE_URL};
+        proxy_pass ${DGCA_BUSINESSRULE_SERVICE_URL}/;
     }
 }
